--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@grpc/grpc-js": "^1.4.4",
     "@grpc/proto-loader": "^0.6.7",
     "@prisma/client": "3.6.0",
-    "dotenv": "^10.0.0"
+    "aws-sdk": "^2.1046.0",
+    "dotenv": "^10.0.0",
+    "multer-s3": "^2.10.0"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.5",
+    "@types/multer-s3": "^2.7.11",
     "grpc-tools": "^1.11.2",
     "grpc_tools_node_protoc_ts": "^5.3.2",
     "prisma": "3.6.0",
