Adiconado script para rodar em produção

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "start": "node dist/src/index.js",
+    "postinstall": "tsc",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
     "build:proto": "sh src/scripts/proto-bulid.sh"
   },
