--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "postinstall": "tsc",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
     "build:proto": "sh src/scripts/proto-bulid.sh"
